--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Test CasseBot</name>
-	<comment>Project skillsfatec created by Buildship.</comment>
+	<name>Test_CasseBot</name>
+	<comment></comment>
 	<projects>
 	</projects>
 	<buildSpec>
