testando usuario box

--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'java'
 apply plugin: 'application'
 
 
-//mainClassName = 'mvc.Main'
-mainClassName = 'files.CreateAppUser'
+mainClassName = 'mvc.Main'
+//mainClassName = 'files.CreateAppUser'
 applicationName = 'app'
 
 defaultTasks = ['clean', 'jar']
@@ -26,8 +26,8 @@ dependencies {
 
 jar {
     manifest {
-        //attributes 'Main-Class': 'mvc.Main'
-        attributes 'Main-Class': 'files.CreateAppUser'
+        attributes 'Main-Class': 'mvc.Main'
+        //attributes 'Main-Class': 'files.CreateAppUser'
     }
 	from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } } {
         // remove all signature files
