--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ apply plugin: 'java'
 apply plugin: 'application'
 
 
-mainClassName = 'mvc.Main'
+mainClassName = 'files.GeneratorPDF'
+//mainClassName = 'mvc.Main'
 //mainClassName = 'files.CreateAppUser'
 applicationName = 'app'
 
@@ -26,8 +27,9 @@ dependencies {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'mvc.Main'
+        //attributes 'Main-Class': 'mvc.Main'
         //attributes 'Main-Class': 'files.CreateAppUser'
+        attributes 'Main-Class': 'files.GeneratorPDF'
     }
 	from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } } {
         // remove all signature files
@@ -56,3 +58,9 @@ dependencies {
    compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
    compile group: 'org.hibernate', name: 'hibernate-c3p0', version: '4.3.6.Final'
 } 
+
+//---------------------Geração de pdf------------------------------------
+
+dependencies {
+	compile group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
+}
