--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,8 @@ dependencies {
    compile 'org.slf4j:slf4j-simple:1.7.7'
    compile 'org.javassist:javassist:3.15.0-GA'
    compile 'mysql:mysql-connector-java:5.1.31'
-   compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+   //compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+   compile group: 'postgresql', name: 'postgresql', version: '9.4.1208-jdbc42-atlassian-hosted'
    compile group: 'org.hibernate', name: 'hibernate-c3p0', version: '4.3.6.Final'
 } 
 
