--- a/build.gradle
+++ b/build.gradle
@@ -62,5 +62,5 @@ dependencies {
 //---------------------Geração de pdf------------------------------------
 
 dependencies {
-	compile group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
+	//compile group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
 }
