--- a/build.gradle
+++ b/build.gradle
@@ -57,10 +57,5 @@ dependencies {
    compile 'mysql:mysql-connector-java:5.1.31'
    compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
    compile group: 'org.hibernate', name: 'hibernate-c3p0', version: '4.3.6.Final'
-} 
-
-//---------------------Geração de pdf------------------------------------
-
-dependencies {
-	//compile group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
-}
+   compile group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
+   } 
