--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,8 @@ dependencies {
    compile 'org.slf4j:slf4j-simple:1.7.7'
    compile 'org.javassist:javassist:3.15.0-GA'
    compile 'mysql:mysql-connector-java:5.1.31'
-   compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+   //compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+   compile 'org.postgresql:postgresql:42.1.4.jre7'
    compile group: 'org.hibernate', name: 'hibernate-c3p0', version: '4.3.6.Final'
    } 
 
